tests/neg-custom-args/i4372.scala
object i4372 {
  class X[A >: X[_ <: X[_]] <: X[A]] // error: too deep
}
